cmake_minimum_required(VERSION 3.9)
project(Compile CXX)

set(CMAKE_CXX_STANDARD 17)
message(STATUS "GCC: Enabled c++17 support")

FIND_PACKAGE(FLEX REQUIRED)
FIND_PACKAGE(BISON)
SET(FlexInput ${CMAKE_SOURCE_DIR}/src/flex/flex.l)
SET(FlexOutput ${CMAKE_SOURCE_DIR}/src/lexer.cpp)
IF(FLEX_FOUND)
    FLEX_TARGET(lexer ${FlexInput} ${FlexOutput})
ENDIF()
SET(BisonInput ${CMAKE_SOURCE_DIR}/src/bison/bison.y)
SET(BisonOutput_cpp ${CMAKE_SOURCE_DIR}/src/parser.cpp)
SET(BisonOutput_h ${CMAKE_SOURCE_DIR}/src/parser.h)
IF(BISON_FOUND)
    BISON_TARGET(parser ${BisonInput} ${BisonOutput_cpp} DEFINES_FILE ${BisonOutput_h})
ENDIF()
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build/bin)
ADD_FLEX_BISON_DEPENDENCY(lexer parser)


add_executable(compile src/HashTable.cpp src/HashTable.h src/Ast.cpp src/Ast.h ${BISON_parser_OUTPUTS} ${FLEX_lexer_OUTPUTS} src/Asm.cpp src/Asm.h)
target_link_libraries(compile fl y m)